@@ -17,6 +17,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
+server/apply.c: apply_treasure():  Bugfix: We need to trigger runes as
+they are found in the treasure chest, because move_rune() will no longer
+trigger them for us.  - Jan Echternach 6/18/2000
+
 Updated the INSTALL directions.  MSW 6/16/2000
 
 Modified the editor to make certain objects (teleporters, creators,
